fix(distributeur): extend 8px spacing fix to TextInput unit

--- a/packages/canopee-css/src/distributeur/Form/Text/Text.css
+++ b/packages/canopee-css/src/distributeur/Form/Text/Text.css
@@ -102,6 +102,7 @@
   padding-top: 0;
 }
 
-.af-form__text > .af-popover__wrapper {
+.af-form__text > .af-popover__wrapper,
+.af-form__text > .af-input__unit {
   margin-left: 0.5rem;
 }
